src/2.8/markdown/html/chapter_01/04_Understand_Install_Uninstall_Update_Add-on.md
---
pagetitle: 1-4. アドオンのインストール・アンインストール・<br>アップデート方法を理解する
subtitle: 1-4. アドオンのインストール・アンインストール・<br>アップデート方法を理解する
---

[1-2節](02_Use_Blender_Add-on.html) ではアドオンをインストールして使ってみました。
しかし [1-2節](02_Use_Blender_Add-on.html) で説明した方法は、数あるインストール方法の1つにすぎません。
[1-2節](02_Use_Blender_Add-on.html) でも少し触れましたが、ソースコードの構成によってインストールやアンインストールの方法が異なります。
本節では、アドオンのインストール・アンインストールの方法に加え、アドオンをアップデートする方法についてまとめます。


# アドオンのソースコードが複数のファイルで構成されるかどうかを見極める

アドオンのインストール方法を説明する前に必ず覚えておいて欲しいこととして、アドオンのソースコードが複数のファイルで構成されるかどうかを見極める方法を説明します。

アドオンのソースコードが複数のファイルで構成されるか単一のソースコードで構成されるかを知るためには、アドオンのソースコードにファイル名が `__init__.py` であるファイルが存在するかを確認します。
`__init__.py` が存在する場合、アドオンは複数のソースコードから構成されています。

アドオンが複数のソースコードで構成されるか否かを、筆者が作成したアドオンを用いて確認します。
またここで使用するアドオンは、後の説明でも使用します。


## 例1: ソースコードが複数のファイルで構成されるアドオン

サンプルアドオン『Sample 2-6』のソースコードは、ディレクトリ `sample_2-6` の中に拡張子が `.py` であるファイルが複数あり、ファイル `__init__.py` が含まれています。
このことから、サンプルアドオン『Sample 2-6』は複数のソースコードで構成されるアドオンと判断できます。


## 例2: ソースコードが単一のファイルで構成されるアドオン

サンプルアドオン『Sample 2-1』のソースコードは、`sample_2-1.py` のみです。
このことから、サンプルアドオン『Sample 2-1』は単一のソースコードで構成されるアドオンと判断できます。

このように、アドオンが単一のソースコードで構成されているか複数のソースコードで構成されているかを見極めるには、ソースコードの中にファイル `__init__.py` が含まれているかを確認すれば良いことになります。


# アドオンのインストール方法

アドオンをインストールする方法は、以下に示す2つの方法があります。

* Blenderのアドオンインストール機能を用いる
* Blenderアドオン用フォルダにソースコードを直接配置する


## 方法1: Blenderのアドオンインストール機能を用いる

Blenderには、アドオンのインストール機能が備わっています。
アドオンをインストールするための標準的な方法ですが、アドオンのソースコードの構成によってはインストールすることができません。
ソースコードが単一のファイルで構成されている場合は問題なくインストールできますが、ソースコードが複数のファイルで構成されている場合は、`__init__.py` が置かれたディレクトリが **zip形式で圧縮されている** 必要があります。

Blenderが持つアドオンのインストール機能を用いて、アドオンをインストールする方法を説明します。


<div class="work"></div>

|||
|---|---|
|1|トップバーの *[編集]* > *[プリファレンス...]* を実行します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_1_use_default_add-on_installation_feature_1.png "アドオンのインストール方法1 手順1")|
|2|*[アドオン]* タブを選択します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_1_use_default_add-on_installation_feature_2.png "アドオンのインストール方法1 手順2")|
|3|*[インストール...]* ボタンをクリックします。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_1_use_default_add-on_installation_feature_3.png "アドオンのインストール方法1 手順3")|
|4|ファイル選択画面でインストールするアドオンのソースコード（拡張子が `.py` または `.zip`）を選択し、*[ファイルからインストール...]* ボタンをクリックします。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_1_use_default_add-on_installation_feature_4.png "アドオンのインストール方法1 手順4")|
|5|インストールが完了します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_1_use_default_add-on_installation_feature_5.png "アドオンのインストール方法1 手順5")|


## 方法2: Blenderアドオン用フォルダにソースコードを直接配置する

Blenderにインストール済のアドオンが配置されているアドオン用フォルダにソースコードを直接配置することで、アドオンをインストールすることができます。
この方法では、ソースコードが単一のファイルで構成されているか複数のファイルで構成されているかにかかわらず、インストールすることができます。


＠＠＠画像を変更すること

<div class="work"></div>

|||
|---|---|
|1|アドオンのソースコードが単一のファイルで構成される場合は `.py` 、アドオンのソースコードが複数のファイルで構成される場合は `__init__.py` が置かれたディレクトリ一式を、Blenderアドオン用フォルダに配置します。|
|2|Blenderを再起動するか、トップバーの *[編集]* > *[プリファレンス...]* 実行時に開くウィンドウから、*[アドオン]* タブにある *[更新]* ボタンをクリックします。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_2_deploy_to_blender_add-on_folder_2.png "アドオンのインストール方法2 手順2")|
|3|インストールが完了します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/install_2_deploy_to_blender_add-on_folder_3.png "アドオンのインストール方法2 手順3")|


# アドオンのアップデート方法

インストール済のアドオンをアップデートするための方法は、3通りあります。

* Blenderのアドオンインストール機能を使用する
* Blenderアドオン用フォルダのソースコードを置き換える
* Blenderの機能『Reload Scripts』を利用する


## 方法1: Blenderのアドオンインストール機能を使用する

アドオンをインストールする場合と同様、Blenderのアドオンインストール機能を用いてアドオンをアップデートすることができます。
インストール時と同様、アドオンのソースコードが複数のファイルで構成されている場合は、`__init__.py` が置かれたディレクトリがzip形式で圧縮されている必要があります。

具体的なアップデートの方法はインストールの方法1と同様ですので、ここでは説明を省略します。


## 方法2: アドオンのソースコードを置き換え、Blenderを再起動する

アドオンフォルダに配置されているアドオンのソースコードを直接置き換えることで、アドオンをアップデートすることができます。
インストール時と同様、単一のファイルで構成されているか複数のファイルで構成されているかにかかわらず、アップデートすることができます。

基本的には、インストールの方法2と同様の方法でアップデートできます。
しかし、トップバーの *[編集]* > *[プリファレンス...]* を実行したときに開くウィンドウから、*[アドオン]* タブにある *[更新]* ボタンをクリックしてもアップデートされない点に注意が必要です。
このため、置き換えたソースコードをBlenderに反映するためには、**Blenderを再起動してアップデートを完了** する必要があります。


## 方法3: Blenderの『Reload Scripts』機能を利用する

方法2では、複数のソースコードから構成されるアドオンをアップデートする度に毎回Blenderを再起動する必要があります。
このため、ソースコードの一部を修正してBlenderに反映することが多いアドオン開発時では、ソースコードを修正するたびにBlenderを再起動する必要があり手間がかかります。
この煩わしさを解決してくれるのが、Blenderが標準で持っている『Reload Scripts』機能です。
『Reload Scripts』機能を利用することで、Blenderを再起動せずにアドオンをアップデートすることができます。

『Reload Scripts』機能を使った、アドオンのアップデート方法について説明します。


<div class="work"></div>

|||
|---|---|
|1|方法2と同様に、ソースコードをアドオンディレクトリに配置します。|
|2|*[F3]* キーを押して検索ボックスを表示します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/update_3_use_reload_scripts_2.png "アドオンのアップデート方法3 手順2")|
|3|*[Reload Scripts]* （日本語では *[スクリプトを再読み込み]*）を検索して実行します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/update_3_use_reload_scripts_3.png "アドオンのアップデート方法3 手順3")|
|4|アドオンのアップデートが完了します。|


このように『Reload Scripts』は非常に便利な機能ですが、複数のファイルで構成されるアドオンではソースコードによっては正しくアップデートされない可能性があります。
詳しくは、[2-6節](../chapter_02/06_Divide_Add-on_Source_into_Multiple_Files.html) を参照してください。


# アドオンのアンインストール方法

アドオンをアンインストールする方法は、2通りあります。

* Blenderのアドオンアンインストール機能を使用する
* Blenderアドオン用フォルダからソースコードを直接削除する


## 方法1: Blender のアドオンアンインストール機能を使用する

アドオンのインストール/アップデートと同様、Blenderのアドオンのアンインストール機能を用いて、アドオンをアンインストールすることができます。
アドオンのソースコードが単一のファイルで構成されているか、複数のファイルで構成されているかにかかわらずアンインストールできますが、最初からBlenderにインストールされているアドオン（アドオンのサポートレベルがReleaseまたはContrib）は削除することができません。

Blenderのアドオンアンインストール機能を使った、アドオンのアンインストール方法を説明します。


<div class="work"></div>

|||
|---|---|
|1|トップバーの *[編集]* > *[プリファレンス...]* を実行します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_1_use_default_add-on_uninstallation_feature_1.png "アドオンのアンインストール方法1 手順1")|
|2|*[アドオン]* タブを選択します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_1_use_default_add-on_uninstallation_feature_2.png "アドオンのアンインストール方法1 手順2")|
|3|アンインストールしたいアドオンの左側の矢印をクリックし、アドオンの詳細情報を表示します。![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_1_use_default_add-on_uninstallation_feature_3.png "アドオンのアンインストール方法1 手順3")|
|4|*[削除]* ボタンをクリックします。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_1_use_default_add-on_uninstallation_feature_4.png "アドオンのアンインストール方法1 手順4")|
|5|アンインストールが完了します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_1_use_default_add-on_uninstallation_feature_5.png "アドオンのアンインストール方法1 手順5")|


## 方法2: Blenderアドオン用フォルダからソースコードを直接削除する

アドオンフォルダに配置されているソースコードを直接削除することで、アンインストールすることができます。
アドオンのソースコードが単一のファイルで構成されているか複数のファイルで構成されているかにかかわらず、アンインストールすることができます。
また、最初からBlenderにインストールされているアドオン（アドオンのサポートレベルがReleaseまたはContrib）についても削除することができます。

アドオンフォルダからソースコードを直接削除し、アドオンをアンインストールする方法を示します。


<div class="work"></div>

|||
|---|---|
|1|アドオンのソースコードの場所がわからない場合は、*[Blenderプリファレンス]* ウィンドウの *[アドオン]* タブから確認します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_2_delete_sources_on_blender_add-on_folder_1.png "アドオンのアンインストール方法2 手順1")|
|2|アンインストールしたいアドオンの左側の矢印をクリックし、アドオンの詳細情報を表示します。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_2_delete_sources_on_blender_add-on_folder_2.png "アドオンのアンインストール方法2 手順2")|
|3|詳細情報の *[ファイル]* にアドオンのソースコードが置かれた場所を示しています。<br>![](../../images/chapter_01/04_Understand_Install_Uninstall_Update_Add-on/uninstall_2_delete_sources_on_blender_add-on_folder_3.png "アドオンのアンインストール方法2 手順3")|
|4|ソースコードを削除します。アドオンのソースコードが複数のファイルで構成されている場合は、*[ファイル]* にはディレクトリではなく `__init__.py` のファイルパスが表示されます。完全にアンインストールするためには、`__init__.py` が置かれたディレクトリごと削除する必要があります。|


# まとめ

アドオンをインストール・アップデート・アンインストールする方法について説明しました。アドオンのソースコードのファイル構成ごとに、利用可能な条件をまとめます。

## インストール


|方法|ソースコードが単一のファイルで構成される|ソースコードが複数のファイルで構成される|
|---|---|---|
|Blenderのアドオンインストール機能を用いる|○|`__init__.py` を含むディレクトリがzip形式で圧縮されている場合のみ|
|アドオンフォルダにソースコードを直接配置する|○|○|


## アップデート

|方法|ソースコードが単一のファイルで構成される|ソースコードが複数のファイルで構成される|
|---|---|---|
|Blenderのアドオンインストール機能を用いる|○|`__init__.py` を含むディレクトリがzip形式で圧縮されている場合のみ|
|アドオンのソースコードを置き換え、Blenderを再起動する|○|○|
|Blenderの『Reload Scripts』機能を利用する|アドオンが『Reload Scripts』機能へ対応している場合のみ|アドオンが『Reload Scripts』機能へ対応している場合のみ|


## アンインストール

|方法|ソースコードが単一のファイルで構成される|ソースコードが複数のファイルで構成される|
|---|---|---|
|Blenderのアドオンアンインストール機能を用いる|○|○|
|アドオンフォルダからソースコードを直接削除する|○|○|

お待たせしました！前置きが長くなりましたが、次節ではいよいよアドオンを作成し動かしてみます。


## ポイント

* アドオンのソースコードは単一のファイルで構成される場合と、複数のファイルで構成される場合がある
* アドオンをインストール・アップデート・アンインストール方法は複数あるが、使用条件がそれぞれ異なることに注意が必要である
* アドオンを開発する時は頻繁にアドオンのアップデートを行うことが多いため、『Reload Scripts』機能を活用しよう
